--- a/FrontEnd/vox_chain-xero-01/src/app/globals.css
+++ b/FrontEnd/vox_chain-xero-01/src/app/globals.css
@@ -59,3 +59,24 @@ body {
     box-shadow: 0 0 0 9px rgba(0, 0, 0, 0);
   }
 }
+
+.scroll-modal::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Warna track */
+.scroll-modal::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+/* Warna thumb (batangnya) */
+.scroll-modal::-webkit-scrollbar-thumb {
+  background: var(--color-purple-dark);
+  border-radius: 10px;
+}
+
+/* Hover effect di thumb */
+.scroll-modal::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
