--- a/FrontEnd/vox_chain-xero-01/src/app/globals.css
+++ b/FrontEnd/vox_chain-xero-01/src/app/globals.css
@@ -120,6 +120,29 @@
   }
 }
 
+.dots::after {
+  content: "";
+  animation: dots 2s steps(4, end) infinite;
+}
+
+@keyframes dots {
+  0% {
+    content: "";
+  }
+  25% {
+    content: ".";
+  }
+  50% {
+    content: "..";
+  }
+  75% {
+    content: "...";
+  }
+  100% {
+    content: "";
+  }
+}
+
 .scroll-modal::-webkit-scrollbar {
   width: 7px;
 }
